Fix few bugs & bump version